<resources>
    <string name="app_name">Urgent Care</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Wanna join our community of volunteers? Register now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="activity_a">Change Email</string>
    <string name="activity_b">Change Password</string>
    <string name="activity_c">Sign Out</string>
    <string name="activity_d">Delete Account</string>
    <string name="title_activity_test">Test</string>
    <string name="subscriber">Victim</string>
    <string name="volunteer">Volunteer</string>
    <string name="gotoactivity">Done</string>
    <string name="select_user_kind">Select User Kind</string>
    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to cancel.</string>
    <string name="test_email">test@test.com</string>
    <string name="test_password">testpassword</string>
    <string name="firebase_path">volunteers</string>
    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="title_activity_volunteers_map_view">Map</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="firebase_email">pbwauyo@gmail.com</string>
    <string name="firebase_password">platinum87</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="Contact">Contact</string>
    <string name="Name">Name</string>
    <string name="kampala">Kampala, Uganda</string>
    <string name="loading">loading…</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="send">SEND</string>
    <string name="chat">Chats</string>
    <string name="send_notifications">Send Notifications</string>
    <string name="send_photo">Send Photo</string>
    <string name="title_activity_accident_map">Accident Location</string>
    <string name="send_msg">Send</string>
    <string name="cancel">Cancel</string>
    <string name="hint">reply to sender</string>
    <string name="title_activity_notification">Reply Notification</string>
    <string name="action_reply"><![CDATA[<b><font color=#128c7e>Reply</font></b>]]></string>
    <string name="action_call"><![CDATA[<b><font color=#128c7e>Call</font></b>]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="other">Other</string>
    <string name="about_us">About Us</string>
    <string name="follow_on_twitter">follow on Twitter</string>
    <string name="follow_on_facebook">follow on facebook</string>
    <string name="openDrawer">Open navigation drawer</string>
    <string name="closeDrawer">Close navigation drawer</string>
    <string name="urgentcare_website">www.urgentcare.info</string>

    <string name="server_key">AIzaSyCuRJAtfG9eSPMSILvoNNuWTDfOJA3XyHw</string>
</resources>
