<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">


    <RadioGroup
        android:id="@+id/userType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="157dp"
        android:checkedButton="@+id/roleTeacher"
        android:padding="16dp">

        <RadioButton
            android:id="@+id/subscriber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscriber" />

        <RadioButton
            android:id="@+id/volunteer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volunteer" />

    </RadioGroup>

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userType"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center|bottom"
        android:background="@drawable/my_button"
        android:padding="16dp"
        android:text="@string/gotoactivity" />

    <TextView
        android:id="@+id/selectHint"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/userType"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-157dp"
        android:layout_marginStart="130dp"
        android:text="@string/select_user_kind" />


</RelativeLayout>