<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="12dp"
    android:weightSum="20">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#075e54"
       >
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="REPLY"
            android:gravity="center">
        </TextView>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint"
        android:id="@+id/sendFeedback"
        android:background="#ece5dd">
    </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/buttonSend"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/send_msg"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAllCaps="false"
                />
    </LinearLayout>

</LinearLayout>
